--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - uses: awss3Sync@master
+    - uses: actions/awss3Sync@master
       with:
         args: --acl public-read --follow-symlinks --delete
       env:
