--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,4 +52,4 @@ jobs:
         aws-region: ap-southeast-1
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./public/ s3://BUCKET_NAME --delete
+      run: aws s3 sync  index.html s3://BUCKET_NAME --delete
