--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,5 +51,8 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-southeast-1
 
-    - name: Deploy static site to S3 bucket
+    - name: Copy files to s3
       run: aws s3 cp  index.html  s3://${{ secrets.AWS_S3_BUCKET }}
+      
+    - name: Run stack
+      run: aws cloudformation deploy  --stack-name Devops --template-file GlueJobYml.yml
