--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
           echo test, and deploy your project.		
 
 
-  deploy:
+  DEV:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
