--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
 
   DEV:
     runs-on: ubuntu-latest
+    environment: DEV
     steps:
     - name: Checkout
       uses: actions/checkout@v1
