--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,9 +45,12 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-southeast-1
+        
+        role-to-assume: arn:aws:iam::446963233070:role/GitHub_Action_Role
+        role-session-name: samplerolesession
 
     - name: Copy files to s3
       run: aws s3 cp  index.html  s3://${{ secrets.AWS_S3_BUCKET }}
@@ -72,7 +75,6 @@ jobs:
         #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-southeast-1
         role-to-assume: arn:aws:iam::446963233070:role/GitHub_Action_Role
-
         role-session-name: samplerolesession
       
 
