--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
         #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-southeast-1
         role-to-assume: arn:aws:iam::446963233070:role/GitHub_Action_Role
-        role-session-name: samplerolesession
+        #role-session-name: samplerolesession
       
 
     - name: Copy files to s3
