--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
   DEV:
     runs-on: ubuntu-latest
     environment: DEV
+    needs: build
     steps:
     - name: Checkout
       uses: actions/checkout@v1
