--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow to help you get started with Actions
-name: Github DevOps Pipeline
+name: Git_DevOps_Pipeline
 
 # Controls when the workflow will run
 on:
