--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         #role-session-name: samplerolesession
 
     - name: Copy files to s3
-      run: aws s3 cp  index.html  s3://${{ secrets.AWS_S3_BUCKET }}
+      run: aws s3 sync .  s3://${{ secrets.AWS_S3_BUCKET }}
       
     - name: Run stack
       run: aws cloudformation deploy  --stack-name Devops --template-file GlueJobYml.yml
