--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,8 +75,8 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-south-1
-        #role-to-assume: arn:aws:iam::446963233070:role/GitHub_Action_Role
-        #role-session-name: samplerolesession
+        role-to-assume: arn:aws:iam::446963233070:role/GitHub_Action_Role
+        role-session-name: samplerolesession
       
 
     - name: Copy files to s3
