--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,13 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]  
+  permissions:
+    id-token: write
+    contents: read# This is required for actions/checkout@v2
   pull_request:
     branches: [ main ]
 
+ 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     
