--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
         #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-south-1        
         role-to-assume: arn:aws:iam::446963233070:role/GitHub_Action_Role
-        role-session-name: samplerolesession
+        #role-session-name: samplerolesession
 
     - name: Copy files to s3
       run: aws s3 sync .  s3://${{ secrets.AWS_S3_BUCKET }}
