--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,11 +45,12 @@ jobs:
     runs-on: ubuntu-latest
     environment: DEV
     needs: build
+    permissions:
+      id-token: write
     steps:
     - name: Checkout
       uses: actions/checkout@v1
-
-
+      
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
