--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,9 +62,12 @@ jobs:
 
     - name: Copy files to s3
       run: aws s3 sync .  s3://${{ secrets.AWS_S3_BUCKET }}
+       print("Sanjy")
       
     - name: Run stack
       run: aws cloudformation deploy  --stack-name Devops --template-file GlueJobYml.yml
+      
+    
 
 
 
