--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,8 +61,9 @@ jobs:
         #role-session-name: samplerolesession
 
     - name: Copy files to s3
-      run: aws s3 sync .  s3://${{ secrets.AWS_S3_BUCKET }}
-       print("Sanjy")
+      run: |
+          aws s3 sync .  s3://${{ secrets.AWS_S3_BUCKET }}
+          print("Sanjy")
       
     - name: Run stack
       #run: aws cloudformation deploy  --stack-name Devops --template-file GlueJobYml.yml
