--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,57 +63,9 @@ jobs:
     - name: Copy files to s3
       run: |
           aws s3 sync .  s3://${{ secrets.AWS_S3_BUCKET }}
-          echo "Sanjay"
+          cat config.txt | while read a b c d; do echo "$a:$b:$c:$d"; done
+
       
     #- name: Run stack
       #run: aws cloudformation deploy  --stack-name Devops --template-file GlueJobYml.yml
       
-    
-
-
-
-  QA:
-    runs-on: ubuntu-latest
-    environment: QA
-    needs: DEV
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1
-        role-to-assume: arn:aws:iam::446963233070:role/GitHub_Action_Role
-        role-session-name: samplerolesession
-      
-
-    - name: Copy files to s3
-      run: aws s3 cp  index.html  s3://${{ secrets.AWS_S3_BUCKET }}
-      
-    - name: Run stack
-      run: aws cloudformation deploy  --stack-name Devops --template-file GlueJobYml.yml
-
-
-  PROD:
-    runs-on: ubuntu-latest
-    environment: PROD
-    needs: QA
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v1
-
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-southeast-1
-
-    - name: Copy files to s3
-      run: aws s3 cp  index.html  s3://${{ secrets.AWS_S3_BUCKET }}
-      
-    - name: Run stack
-      run: aws cloudformation deploy  --stack-name Devops --template-file GlueJobYml.yml
