--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
+          py .\readConfig.py
           #pip install -r requirements.txt          
 
 
