--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
-          python .\readConfig.py
+          python readConfig.py
           #pip install -r requirements.txt          
 
 
