--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,6 +45,10 @@ jobs:
         with:
           python-version: '3.7.7' # install the python version needed
           
+      - name: checkout repo content
+        uses: actions/checkout@v2 # checkout the repository content to github runner
+          
+          
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
