--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
         #aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-south-1               
-        role-to-assume: arn:aws:iam::446963233070:role/gitActionRole
+        role-to-assume: gitActionRole
         #role-session-name: samplerolesession
         
     - name: Copy files to s3
