--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,11 +55,10 @@ jobs:
           python readConfig.py
           #pip install -r requirements.txt          
 
-
   DEV:
     runs-on: ubuntu-latest
     environment: DEV
-    needs: build
+    #needs: build
     permissions:
       id-token: write
     steps:
@@ -69,24 +68,18 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        #aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-south-1               
-        role-to-assume: gitActionRole
-        #role-session-name: samplerolesession
+        aws-region: ap-south-1                                           ## Put the region in github secret.
+        role-to-assume: arn:aws:iam::446963233070:role/github-oidc-role  ## Put role arn in github secret.
+        role-session-name: oidcRoleSession
         
+    - name: test assume role
+      run: |
+           aws sts get-caller-identity --region ap-south-1               ## Put the region in github secret.
+
     - name: Copy files to s3
       run: |
-           aws sts get-caller-identity --region ap-south-1
+          pwd
+          aws s3 cp test.txt s3://devopskellogs3bucket/
 
-
-
-    #- name: Copy files to s3
-    #  run: |
-    #      aws s3 sync .  s3://${{ secrets.AWS_S3_BUCKET }}
-    #      cat config.txt | while read a b c d; do echo "$a $b  $d"; done
-
-      
-    #- name: Run stack
-    #  run: aws cloudformation create-stack  --stack-name Devops1 --template-body file://GlueJobYml.yml --parameters file://stackParameter1.json
-      
+    - name: Run stack
+      run: aws cloudformation create-stack  --stack-name Devops1 --template-body file://GlueJobYml.yml --parameters file://stackParameter1.json 
