--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
   DEV:
     runs-on: ubuntu-latest
     environment: DEV
-    #needs: build
+    needs: build
     permissions:
       id-token: write
     steps:
@@ -73,13 +73,10 @@ jobs:
         role-session-name: oidcRoleSession
         
     - name: test assume role
-      run: |
-           aws sts get-caller-identity --region ap-south-1               ## Put the region in github secret.
+      run: aws sts get-caller-identity --region ap-south-1               ## Put the region in github secret.
 
     - name: Copy files to s3
-      run: |
-          pwd
-          aws s3 cp test.txt s3://devopskellogs3bucket/
+      run: aws s3 cp test.txt s3://devopskellogs3bucket/
 
     - name: Run stack
       run: aws cloudformation create-stack  --stack-name Devops1 --template-body file://GlueJobYml.yml --parameters file://stackParameter1.json 
