--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,61 @@ jobs:
       run: aws sts get-caller-identity --region ap-south-1               ## Put the region in github secret.
 
     - name: Copy files to s3
+      run: aws s3 sync . s3://devopskellogs3bucket/
+
+    - name: Run stack
+      run: aws cloudformation create-stack  --stack-name Devops1 --template-body file://GlueJobYml.yml --parameters file://stackParameter1.json 
+
+  QA:
+    runs-on: ubuntu-latest
+    environment: QA
+    needs: DEV
+    permissions:
+      id-token: write
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-region: ap-south-1                                           ## Put the region in github secret.
+        role-to-assume: arn:aws:iam::446963233070:role/github-oidc-role  ## Put role arn in github secret.
+        role-session-name: oidcRoleSession
+        
+    - name: test assume role
+      run: aws sts get-caller-identity --region ap-south-1               ## Put the region in github secret.
+
+    - name: Copy files to s3
       run: aws s3 cp test.txt s3://devopskellogs3bucket/
 
     - name: Run stack
       run: aws cloudformation create-stack  --stack-name Devops1 --template-body file://GlueJobYml.yml --parameters file://stackParameter1.json 
+	  
+
+  PROD:
+    runs-on: ubuntu-latest
+    environment: PROD
+    needs: QA
+    permissions:
+      id-token: write
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-region: ap-south-1                                           ## Put the region in github secret.
+        role-to-assume: arn:aws:iam::446963233070:role/github-oidc-role  ## Put role arn in github secret.
+        role-session-name: oidcRoleSession
+        
+    - name: test assume role
+      run: aws sts get-caller-identity --region ap-south-1               ## Put the region in github secret.
+
+    - name: Copy files to s3
+      run: aws s3 cp test.txt s3://devopskellogs3bucket/
+
+    - name: Run stack
+      run: aws cloudformation create-stack  --stack-name Devops1 --template-body file://GlueJobYml.yml --parameters file://stackParameter1.json 
+	  	  
