--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -79,8 +79,7 @@ jobs:
       run: aws s3 sync . s3://devopskellogs3bucket/
 
     - name: Run stack
-      run: |
-        aws cloudformation delete-stack  --stack-name devStack
+      run: 
         aws cloudformation create-stack  --stack-name devStack --template-body file://GlueJobYml.yml --parameters file://dev_stack_parameter.json 
 
   QA:
