--- a/GlueJobYml.yml
+++ b/GlueJobYml.yml
@@ -5,6 +5,12 @@ Parameters:
     Type: String
     Description: S3 bucket that holds data for demo
 Resources:
+    S3Bucket:
+    DeletionPolicy: Retain
+    Type: AWS::S3::Bucket
+    Description: Creating Amazon S3 bucket from CloudFormation
+    Properties:
+      BucketName: myhardcodedbucket5649769
   GlueJobCopyS3toS3:
     Type: AWS::Glue::Job
     Properties:      
