--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches: [ main ]  
-    
+
   pull_request_review_comment:
     id-token: write
     contents: read
@@ -14,7 +14,7 @@ on:
   pull_request:
     branches: [ main ]
 
- 
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     
@@ -33,7 +33,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
-
+      
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
@@ -44,9 +44,6 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7.7' # install the python version needed
-          
-      - name: checkout repo content
-        uses: actions/checkout@v2 # checkout the repository content to github runner
           
           
       - name: install python packages
@@ -61,6 +58,7 @@ jobs:
     needs: build
     permissions:
       id-token: write
+      contents: read
     steps:
     - name: Checkout
       uses: actions/checkout@v3
