--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -66,7 +66,8 @@ jobs:
 
     - name: Run stack
       run: 
-        aws cloudformation create-stack  --stack-name devStack --template-body file://GlueJobYml.yml --parameters file://dev_stack_parameter.json 
+        aws cloudformation create-stack  --stack-name devStack --template-body file://GlueJobYml.yml 
+        #aws cloudformation create-stack  --stack-name devStack --template-body file://GlueJobYml.yml --parameters file://dev_stack_parameter.json         
 
   QA:
     runs-on: ubuntu-latest
